--- a/index.html
+++ b/index.html
@@ -45,5 +45,11 @@
     <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
 
     <script src="./main.js"></script>
+
+    <hr>
+    
+    <footer>
+        <p class="footer">By: <a href="https://www.linkedin.com/in/brunna-sousa/" target="_blank" rel="external">Brunna Sousa.</a> Em: agosto/2022 </p>
+    </footer>
 </body>
 </html>
